--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.shenv
 .env
 .venv
 env/
@@ -192,3 +193,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# sample
+dashboard-tips
