--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [project]
-name = "rpaddingtonguy"
-version = "1.0.0"
-requires-python = ">=3.12"
+name = "shiny_python_demo"
+version = "1.0.4"
+requires-python = ">=3.11"
