--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 shiny==1.4.0
-plotly==6.2.0
-pandas==2.3.0
+plotly==6.3.0
+pandas==2.3.2
+polars==1.33.1
 statsmodels==0.14.4
 faicons==0.2.2
 scipy==1.15.3
-psycopg==3.2.10
 python-dotenv==1.1.1
